--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../assets/background.jpg");
+  background-image: url("../assets/background2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
